vertical alignment fixed

--- a/week2/bootstrap-site/style.css
+++ b/week2/bootstrap-site/style.css
@@ -18,3 +18,13 @@
     background-repeat: no-repeat;
     color: whitesmoke;
 }
+
+.bowl {
+    height: 300px;
+}
+
+@media (max-width:576px) {
+    .bowl {
+        height: 200px;
+    }
+}
